0028360: Draw Harness - access for DRAW TCL interpreter needed for custom applications

Components of DRAW now use interpreter with static method Draw::GetInterpretor() instead of shared global variable